fix(ui): messages being cut off on narrower screens (#1546)

--- a/apps/agentstack-ui/src/modules/runs/chat/ChatMessagesView.module.scss
+++ b/apps/agentstack-ui/src/modules/runs/chat/ChatMessagesView.module.scss
@@ -40,7 +40,6 @@ $zindex-buttons: 2;
   display: flex;
   flex-direction: column-reverse;
   row-gap: $messages-row-gap;
-  block-size: 100%;
 }
 
 .bottom {
